In machine_learning_template.ipynb > Modeling (Classification) section: Add helper functions to save and load models with pickle and save baseline model results

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -4957,6 +4957,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "22993a78-d509-4a34-bc86-0f4ca6df9bf7",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Helper functions to save and load models using <code>pickle</code>. \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1440a84-e00a-420c-9f37-2bbd93ca2671",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to save model as .pkl file\n",
+    "def save_model(model, filename):\n",
+    "    # Create models directory if it doesn't exist\n",
+    "    os.makedirs(\"models\", exist_ok=True)\n",
+    "    # Save model as .pkl file \n",
+    "    try:\n",
+    "        with open(f\"models/{filename}\", \"wb\") as file:\n",
+    "            pickle.dump(model, file)\n",
+    "        print(f\"Model saved successfully under 'models/{filename}'.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred while saving the model: {e}\")\n",
+    "\n",
+    "# Function to load model from .pkl file \n",
+    "def load_model(filename):\n",
+    "    try:\n",
+    "        with open(f\"models/{filename}\", \"rb\") as file:  # ensure model is stored in \"models\" directory\n",
+    "            model = pickle.load(file)\n",
+    "        print(f\"{filename} loaded successfully.\")\n",
+    "        return model\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred while loading {filename}: {e}\")\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8bb40770-9329-4b98-a938-6668e3a50907",
    "metadata": {},
    "source": [
@@ -5093,7 +5134,10 @@
     "\n",
     "    \n",
     "# Use function to train all baseline models\n",
-    "baseline_model_results = evaluate_all_models(baseline_models, X_train_transformed, y_train, X_val_transformed, y_val)"
+    "baseline_model_results = evaluate_all_models(baseline_models, X_train_transformed, y_train, X_val_transformed, y_val)\n",
+    "\n",
+    "# Save baseline model results as .pkl file (using helper function)  \n",
+    "save_model(baseline_model_results, \"baseline_models.pkl\")"
    ]
   },
   {
