--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -179,15 +179,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data Processing\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, OneHotEncoder, OrdinalEncoder, PolynomialFeatures\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "# Data Visualization\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
+    "# Modeling\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV, RandomizedSearchCV\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, OneHotEncoder, OrdinalEncoder, PolynomialFeatures\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_percentage_error, r2_score, classification_report, confusion_matrix, ConfusionMatrixDisplay\n",
     "from sklearn.linear_model import LinearRegression, LogisticRegression, ElasticNet\n",
     "from sklearn.neighbors import KNeighborsRegressor, KNeighborsClassifier\n",
     "from sklearn.svm import SVR, SVC\n",
@@ -195,7 +198,24 @@
     "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
     "from sklearn.neural_network import MLPRegressor, MLPClassifier\n",
     "from xgboost import XGBRegressor, XGBClassifier\n",
-    "import xgboost as xgb"
+    "import xgboost as xgb\n",
+    "import pickle\n",
+    "\n",
+    "# Evaluation Metrics: Regression\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_percentage_error, r2_score\n",
+    "# Evaluation Metrics: Classification\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score,\n",
+    "    recall_score,\n",
+    "    precision_score,\n",
+    "    f1_score,\n",
+    "    roc_auc_score,\n",
+    "    precision_recall_curve,\n",
+    "    auc,\n",
+    "    classification_report, \n",
+    "    confusion_matrix, \n",
+    "    ConfusionMatrixDisplay\n",
+    ")"
    ]
   },
   {
@@ -5053,15 +5073,6 @@
    "source": [
     "# Imports\n",
     "import time\n",
-    "from sklearn.metrics import (\n",
-    "    accuracy_score,\n",
-    "    recall_score,\n",
-    "    precision_score,\n",
-    "    f1_score,\n",
-    "    roc_auc_score,\n",
-    "    precision_recall_curve,\n",
-    "    auc\n",
-    ")\n",
     "\n",
     "# Define features to be used for model training\n",
     "columns_to_keep = [\"feature_1\", \"feature_2\", \"feature_3\", \"feature_4\", \"feature_5\"]\n",
