In machine_learning_template.ipynb > Modeling (Classification) > Baseline Models section: Add Training subsection header

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5065,6 +5065,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7340453d-3c06-4e94-aec3-3febf9e26621",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Training</h3>\n",
+    "</div>\n",
+    "\n",
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    📌 Train all baseline models and store fitted models, predicted values, and evaluation metrics in a results dictionary.\n",
+    "</p> "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cb538f25-abb7-4ae9-935b-f3272740867f",
