In machine_learning_template.ipynb > Modeling (Classification) > Baseline Models section: Add Metrics section with code to load baseline model results, extract metrics and show model comparison table

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5167,6 +5167,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "47831491-9019-4061-916a-3637f381efc5",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Metrics</h3>\n",
+    "</div>\n",
+    "\n",
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    📌 Compare the evaluation metrics of all baseline models on the validation data.\n",
+    "</p> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77ae74e6-3fc2-485b-9e85-3a0bf73492aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load baseline model results (using helper function)\n",
+    "baseline_model_results = load_model(\"baseline_models.pkl\")\n",
+    "\n",
+    "# Extract evaluation metrics\n",
+    "model_comparison = {\n",
+    "    model_name: {\n",
+    "        metric: baseline_model_results[model_name][metric]\n",
+    "        for metric in [\"Accuracy\", \"Recall\", \"Precision\", \"F1-Score\", \"ROC-AUC\", \"AUC-PR\"]\n",
+    "    }\n",
+    "    for model_name in baseline_model_results\n",
+    "}\n",
+    "\n",
+    "# Convert the dictionary to a DataFrame \n",
+    "model_comparison = pd.DataFrame(model_comparison).transpose()\n",
+    "\n",
+    "# Show model comparison table\n",
+    "round(model_comparison, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fe872c0e-d238-4b4f-a946-2d12929e311a",
    "metadata": {},
    "source": [
