In machine_learning_template.ipynb > Modeling (Classification) > Baseline Models section: Add Precision-Recall Curves section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5207,6 +5207,83 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a01ac0d9-0fe3-48b2-98a9-29e646856fa6",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Precision-Recall Curves</h3>\n",
+    "</div>\n",
+    "\n",
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    📌 Plot precision-recall curves of all baseline models on the validation data in a single graph.\n",
+    "</p> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98cdd453-f4fc-4ecb-859d-5747845560f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to plot precision-recall curve of one or more models\n",
+    "def plot_precision_recall_curve(y_true, model_results, title=\"Precision-Recall Curves\", safe_to_file=False):\n",
+    "    # Set the figure size\n",
+    "    fig, ax = plt.subplots(figsize=(10, 8))\n",
+    "    \n",
+    "    # Get colors for different models (colormap \"viridis\" is colorblind-friendly)\n",
+    "    cmap = plt.get_cmap(\"viridis\", len(model_results))\n",
+    "    \n",
+    "    # Plot baseline performance of random classifier\n",
+    "    baseline = np.sum(y_true) / len(y_true)\n",
+    "    ax.axhline(y=baseline, color=\"black\", linestyle=\"--\", alpha=0.5, label=f\"Baseline = {baseline:.2f}\")\n",
+    "    \n",
+    "    # Iterate over each model in the results dictionary\n",
+    "    for i, (model_name, model_result) in enumerate(model_results.items()):\n",
+    "        # Plot precision-recall curve for the current model\n",
+    "        precision_curve, recall_curve, _ = precision_recall_curve(y_true, model_result[\"y_val_proba\"])\n",
+    "        auc_pr = auc(recall_curve, precision_curve)\n",
+    "        ax.plot(recall_curve, precision_curve, color=cmap(i), label=f\"{model_name} AUC-PR={auc_pr:.2f}\")\n",
+    "    \n",
+    "    # Customize title, axes labels, axes ticks, legend, and grid\n",
+    "    ax.set_title(title, fontsize=14)\n",
+    "    ax.set_ylabel(\"Precision\", fontsize=12)\n",
+    "    ax.set_xlabel(\"Recall\", fontsize=12)\n",
+    "    ax.set_ylim(0, 1.02)  # slightly extend y-axis for visibility\n",
+    "    ax.set_xlim(0, 1)\n",
+    "    ax.set_yticks(np.arange(0, 1.1, 0.1))\n",
+    "    ax.set_xticks(np.arange(0, 1.1, 0.1))\n",
+    "    ax.legend(loc=\"best\", fontsize=11)\n",
+    "    ax.grid(True, alpha=0.3)\n",
+    "    \n",
+    "    # Save the plot to file\n",
+    "    if safe_to_file:\n",
+    "        os.makedirs(\"images\", exist_ok=True)\n",
+    "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
+    "        if not os.path.exists(image_path):\n",
+    "            try:        \n",
+    "                fig.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                print(f\"Precision-recall curve plot saved successfully to '{image_path}'.\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error saving precision-recall curve plot: {e}\")\n",
+    "        else:\n",
+    "            print(f\"Skip saving precision-recall curve plot to file: '{image_path}' already exists.\")\n",
+    "    \n",
+    "    # Show the plot\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "# Use function to plot precision-recall curves of all baseline models on the validation data \n",
+    "plot_precision_recall_curve(\n",
+    "    y_val, \n",
+    "    baseline_model_results, \n",
+    "    title=\"Precision-Recall Curves: Baseline Models\", \n",
+    "    safe_to_file=\"precision_recall_curves_baseline.png\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fe872c0e-d238-4b4f-a946-2d12929e311a",
    "metadata": {},
    "source": [
