--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3088,7 +3088,9 @@
   {
    "cell_type": "markdown",
    "id": "6dc85084-35ba-46e8-82aa-db1dacb9f2f5",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "<div style=\"background-color:#2c699d; color:white; padding:15px; border-radius:6px\">\n",
     "    <h1 style=\"margin:0px\">Modeling (Regression)</h1>\n",
@@ -5280,6 +5282,77 @@
     "    title=\"Precision-Recall Curves: Baseline Models\", \n",
     "    safe_to_file=\"precision_recall_curves_baseline.png\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b2d3988-2eb7-441d-acbf-e733a78e5be8",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Classification Report and Confusion Matrix</h3>\n",
+    "</div>\n",
+    "\n",
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    📌 Create classification report and plot confusion matrix for all baseline models on the validation data.\n",
+    "</p> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48868333-e803-4682-96a5-5aa60e0bc67c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to plot confusion matrix\n",
+    "def plot_confusion_matrix (y, y_pred, title=\"\", display_labels=None, safe_to_file=False, axes=None):\n",
+    "    # Create axis if not provided\n",
+    "    if axes is None:\n",
+    "        fig, ax = plt.subplots()\n",
+    "    else:\n",
+    "        ax = axes\n",
+    "    \n",
+    "    # Create confusion matrix\n",
+    "    cm = confusion_matrix(y, y_pred)\n",
+    "    cm_disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=display_labels)\n",
+    "    cm_disp.plot(cmap=\"viridis\", values_format=\"d\", colorbar=False, ax=ax)\n",
+    "    \n",
+    "    # Customize plot\n",
+    "    ax.set_title(f\"{title}\", fontsize=14)\n",
+    "    ax.set_xlabel(\"Predicted\", fontsize=12)\n",
+    "    ax.set_ylabel(\"True\", fontsize=12)\n",
+    "\n",
+    "    # Save to file\n",
+    "    if safe_to_file:\n",
+    "        os.makedirs(\"images\", exist_ok=True)\n",
+    "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
+    "        if not os.path.exists(image_path):\n",
+    "            try:        \n",
+    "                plt.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                print(f\"Confusion matrix saved successfully to '{image_path}'.\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error saving confusion matrix: {e}\")\n",
+    "        else:\n",
+    "            print(f\"Skip saving confusion matrix to file: '{image_path}' already exists.\")\n",
+    "\n",
+    "    # Show the plot\n",
+    "    if axes is None:\n",
+    "        fig.tight_layout()\n",
+    "        plt.show()\n",
+    "\n",
+    "\n",
+    "# Show classification report and use function to plot confusion matrix for all baseline models\n",
+    "for model_name, model_result in baseline_model_results.items():\n",
+    "    # Classification report\n",
+    "    print(f\"{model_name}: Classification Report\")\n",
+    "    print(classification_report(y_val, model_result[\"y_val_pred\"], zero_division=0))  # disable zero-division warning if no predictions for a given class (sets metric to 0) \n",
+    "\n",
+    "    # Confusion matrix\n",
+    "    plot_confusion_matrix(y_val, model_result[\"y_val_pred\"], title=f\"{model_name}: Confusion Matrix\")\n",
+    "\n",
+    "    # Separation line\n",
+    "    print(\"=\" * 100)"
    ]
   },
   {
