In machine_learning_template.ipynb > Modeling (Classification) > Baseline Models section: Add Overfitting section with analyze_overfitting function and df with training metrics, validation metrics and difference scores

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5357,6 +5357,102 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3465106b-f78f-4daf-934d-52237756293d",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Overfitting</h3>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Diagnose overfitting for all baseline models by comparing evaluation metrics between training and validation data.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac04bf40-f491-4be1-ba3f-bdc1b8218c11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to analyze overfitting\n",
+    "def analyze_overfitting(X_train, y_train, model_results):\n",
+    "    # Store overfitting results as a list of dictionaries\n",
+    "    overfitting_results = [] \n",
+    "    \n",
+    "    # Iterate over each model\n",
+    "    for model_name, model_result in model_results.items():\n",
+    "        model = model_result[\"model\"]\n",
+    "    \n",
+    "        # Predict on training data\n",
+    "        y_train_proba = model.predict_proba(X_train)[:, 1]\n",
+    "        if \"best_threshold\" in model_result:\n",
+    "            y_train_pred = (y_train_proba >= result[\"best_threshold\"]).astype(int)\n",
+    "        else:\n",
+    "            y_train_pred = model.predict(X_train)\n",
+    "\n",
+    "        # Calculate training metrics\n",
+    "        accuracy_train = accuracy_score(y_train, y_train_pred)\n",
+    "        recall_train = recall_score(y_train, y_train_pred)\n",
+    "        precision_train = precision_score(y_train, y_train_pred)\n",
+    "        f1_train = f1_score(y_train, y_train_pred)\n",
+    "        roc_auc_train = roc_auc_score(y_train, y_train_proba)\n",
+    "        precision_curve_train, recall_curve_train, _ = precision_recall_curve(y_train, y_train_proba)\n",
+    "        auc_pr_train = auc(recall_curve_train, precision_curve_train)\n",
+    "\n",
+    "        # Get validation metrics\n",
+    "        accuracy_val = model_result[\"Accuracy\"]\n",
+    "        recall_val = model_result[\"Recall\"]\n",
+    "        precision_val = model_result[\"Precision\"]\n",
+    "        f1_val = model_result[\"F1-Score\"] \n",
+    "        roc_auc_val = model_result[\"ROC-AUC\"]\n",
+    "        auc_pr_val = model_result[\"AUC-PR\"]\n",
+    "        \n",
+    "        # Create results dictionary for current model\n",
+    "        model_metrics = {\n",
+    "            \"Model\": model_name,\n",
+    "            \"Accuracy (Train)\": accuracy_train,\n",
+    "            \"Accuracy (Val)\": accuracy_val,\n",
+    "            \"Accuracy (Diff)\": accuracy_train - accuracy_val,\n",
+    "            \"Recall (Train)\": recall_train,\n",
+    "            \"Recall (Val)\": recall_val,\n",
+    "            \"Recall (Diff)\": recall_train - recall_val,\n",
+    "            \"Precision (Train)\": precision_train,\n",
+    "            \"Precision (Val)\": precision_val,\n",
+    "            \"Precision (Diff)\": precision_train - precision_val,\n",
+    "            \"F1-Score (Train)\": f1_train,\n",
+    "            \"F1-Score (Val)\": f1_val, \n",
+    "            \"F1-Score (Diff)\": f1_train - f1_val,\n",
+    "            \"ROC-AUC (Train)\": roc_auc_train,\n",
+    "            \"ROC-AUC (Val)\": roc_auc_val,\n",
+    "            \"ROC-AUC (Diff)\": roc_auc_train - roc_auc_val,\n",
+    "            \"AUC-PR (Train)\": auc_pr_train,\n",
+    "            \"AUC-PR (Val)\": auc_pr_val,\n",
+    "            \"AUC-PR (Diff)\": auc_pr_train - auc_pr_val,\n",
+    "        }\n",
+    "\n",
+    "        # Append current model dictionary\n",
+    "        overfitting_results.append(model_metrics)\n",
+    "    \n",
+    "    # Convert the list of dictionaries into a DataFrame\n",
+    "    overfitting_results = pd.DataFrame(overfitting_results)\n",
+    "    \n",
+    "    # Set model as index\n",
+    "    overfitting_results = overfitting_results.set_index(\"Model\")\n",
+    "    \n",
+    "    return overfitting_results\n",
+    "\n",
+    "\n",
+    "# Use function to analyze overfitting for all baseline models \n",
+    "baseline_models_overfitting = analyze_overfitting(X_train_transformed, y_train, model_results=baseline_model_results)\n",
+    "\n",
+    "# Display overfitting results (with 2 decimals)\n",
+    "round(baseline_models_overfitting, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fe872c0e-d238-4b4f-a946-2d12929e311a",
    "metadata": {},
    "source": [
