In machine_learning_template.ipynb > Modeling (Classification) > Baseline Models > Overfitting section: Add function to plot training and validation metrics of multiple models using grouped bar plots and use it for all baseline models

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5453,6 +5453,110 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3c3cd1c6-4874-4467-8fd0-36c066566609",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Plot training and validation metrics of all baseline models side-by-side using grouped bar plots.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72df26b0-87a8-477c-9cac-e4451024452d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to plot train vs. validation metrics of multiple models \n",
+    "def plot_train_val_metrics(metrics, overfitting_results, safe_to_file=False):    \n",
+    "    # Ensure metrics is a list, even if a single metric is provided\n",
+    "    if not isinstance(metrics, list):\n",
+    "        metrics = [metrics]\n",
+    "\n",
+    "    # Get number of metrics\n",
+    "    n = len(metrics)\n",
+    "    \n",
+    "    # Set up the subplot layout based on the number of metrics\n",
+    "    if n == 1:\n",
+    "        fig, ax = plt.subplots(figsize=(9, 6))\n",
+    "        axes = [ax]\n",
+    "    else:\n",
+    "        # Create a grid with 2 columns and enough rows to accommodate all metrics\n",
+    "        rows = int(np.ceil(n / 2))\n",
+    "        fig, axes = plt.subplots(rows, 2, figsize=(16, 6 * rows))\n",
+    "        # Flatten the axes for easier iteration\n",
+    "        axes = axes.flat\n",
+    "\n",
+    "    # Add overall figure title only if there are multiple metrics\n",
+    "    if n > 1:\n",
+    "        fig.suptitle(\"Overfitting: Train vs. Validation Metrics\", fontsize=16, y=0.98)\n",
+    "    \n",
+    "    for ax, metric in zip(axes, metrics):        \n",
+    "        # Create DataFrame with only training and validation metric\n",
+    "        metric_df = overfitting_results[[f\"{metric} (Train)\", f\"{metric} (Val)\"]].reset_index()\n",
+    "    \n",
+    "        # Rename columns for clarity\n",
+    "        metric_df = metric_df.rename(columns={f\"{metric} (Train)\": \"Training\", f\"{metric} (Val)\": \"Validation\"})\n",
+    "        \n",
+    "        # Melt the DataFrame for easier plotting \n",
+    "        metric_df = pd.melt(\n",
+    "            metric_df,\n",
+    "            id_vars=[\"Model\"], \n",
+    "            value_vars=[\"Training\", \"Validation\"],\n",
+    "            var_name=\"Data\", \n",
+    "            value_name=metric\n",
+    "        )\n",
+    "        \n",
+    "        # Create grouped bar chart\n",
+    "        sns.barplot(data=metric_df, x=\"Model\", y=metric, hue=\"Data\", palette=\"viridis\", ax=ax)\n",
+    "    \n",
+    "        # Add value labels \n",
+    "        for container in ax.containers:\n",
+    "            ax.bar_label(container, fmt=\"%.2f\", padding=3, fontsize=10)\n",
+    "       \n",
+    "        # Customize plot \n",
+    "        if n > 1:\n",
+    "            ax.set_title(f\"{metric}\", fontsize=14, pad=12)\n",
+    "            ax.set_ylabel(\"\")\n",
+    "        else:\n",
+    "            ax.set_title(f\"Overfitting: Train vs. Validation {metric}\", fontsize=14, pad=12)\n",
+    "            ax.set_ylabel(metric, fontsize=12)\n",
+    "        ax.set_xlabel(\"\")\n",
+    "        ax.set_ylim(0, 1.05)\n",
+    "        ax.set_yticks(np.arange(0, 1.1, 0.1))\n",
+    "        ax.tick_params(axis=\"x\", labelrotation=45 if len(overfitting_results.index) > 5 else 0, labelsize=12)  # rotate xticks if more than 5 models\n",
+    "        ax.tick_params(axis=\"y\", labelsize=10)\n",
+    "        ax.legend(fontsize=11)\n",
+    "        ax.grid(axis=\"y\", alpha=0.3)\n",
+    "    \n",
+    "    # Save to file\n",
+    "    if safe_to_file:\n",
+    "        os.makedirs(\"images\", exist_ok=True)\n",
+    "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
+    "        if not os.path.exists(image_path):\n",
+    "            try:        \n",
+    "                plt.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                print(f\"Overfitting plot saved successfully to '{image_path}'.\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error saving overfitting plot: {e}\")\n",
+    "        else:\n",
+    "            print(f\"Skip saving overfitting plot to file: '{image_path}' already exists.\")\n",
+    "    \n",
+    "    # Adjust layout and show the plot\n",
+    "    fig.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "# Use function to plot train vs. validation AUC-PR of all baseline models  \n",
+    "plot_train_val_metrics(\"AUC-PR\", baseline_models_overfitting)\n",
+    "\n",
+    "# Use function to plot train vs. validation comparison of all metrics for all baseline models \n",
+    "plot_train_val_metrics([\"Accuracy\", \"Recall\", \"Precision\", \"F1-Score\", \"ROC-AUC\", \"AUC-PR\"], baseline_models_overfitting)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fe872c0e-d238-4b4f-a946-2d12929e311a",
    "metadata": {},
    "source": [
