In machine_learning_template.ipynb > Modeling (Classification) > Baseline Models > Overfitting section: Add function to plot train-validation difference scores of multiple models across multiple metrics in a single grouped bar plot

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5557,6 +5557,82 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ba5ea02d-8488-41cd-9f8b-a9b8b98f4aa1",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Plot train-validation difference scores of all metrics and all baseline models in a single grouped bar plot.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00dff9c5-e39a-4352-9ad0-c0f07ae8a67b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to plot train-validation difference scores of multiple models across multiple metrics in a single grouped bar plot\n",
+    "def plot_train_val_difference(metrics, overfitting_results, safe_to_file=False):\n",
+    "    # Extract difference scores from overfitting results\n",
+    "    diff_metrics = [metric + \" (Diff)\" for metric in metrics]\n",
+    "    metric_df = overfitting_results[diff_metrics].reset_index()\n",
+    "        \n",
+    "    # Rename columns for better reabability\n",
+    "    metric_df.columns = metric_df.columns.str.replace(\" (Diff)\", \"\")\n",
+    "    \n",
+    "    # Melt the DataFrame for easier plotting\n",
+    "    metric_df = pd.melt(\n",
+    "        metric_df,\n",
+    "        id_vars=[\"Model\"], \n",
+    "        var_name=\"Metric\", \n",
+    "        value_name=\"Value\"\n",
+    "    )\n",
+    "    \n",
+    "    # Set the figure size\n",
+    "    fig, ax = plt.subplots(figsize=(12, 6))\n",
+    "        \n",
+    "    # Create grouped bar plot\n",
+    "    sns.barplot(data=metric_df, x=\"Model\", y=\"Value\", hue=\"Metric\", palette=\"viridis\", ax=ax)\n",
+    "    \n",
+    "    # Add value labels\n",
+    "    for container in ax.containers:\n",
+    "        ax.bar_label(container, fmt=\"%.2f\", padding=3, fontsize=7)\n",
+    "    \n",
+    "    # Customize plot\n",
+    "    ax.set_title(\"Overfitting: Train-Validation Difference Scores\", fontsize=14, pad=12)\n",
+    "    ax.set_xlabel(\"\")\n",
+    "    ax.set_ylabel(\"Difference (Train - Val)\", fontsize=12)\n",
+    "    ax.tick_params(axis=\"x\", labelsize=12, labelrotation=45 if len(overfitting_results.index) > 5 else 0)  # rotate xticks if more than 5 models\n",
+    "    ax.tick_params(axis=\"y\", labelsize=10)  \n",
+    "    ax.set_ylim(metric_df[\"Value\"].min() - 0.05, metric_df[\"Value\"].max() + 0.05)  # slightly extend y-axis for visibility \n",
+    "    ax.legend(loc=\"upper left\", fontsize=11)\n",
+    "    ax.grid(axis=\"y\", alpha=0.3)\n",
+    "\n",
+    "    # Save to file\n",
+    "    if safe_to_file:\n",
+    "        os.makedirs(\"images\", exist_ok=True)\n",
+    "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
+    "        if not os.path.exists(image_path):\n",
+    "            try:        \n",
+    "                plt.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                print(f\"Overfitting plot saved successfully to '{image_path}'.\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error saving overfitting plot: {e}\")\n",
+    "        else:\n",
+    "            print(f\"Skip saving overfitting plot to file: '{image_path}' already exists.\")\n",
+    "    \n",
+    "    # Adjust layout and show plot\n",
+    "    fig.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "# Use function to plot train-validation difference scores of all metrics and all baseline models\n",
+    "plot_train_val_difference([\"Accuracy\", \"Recall\", \"Precision\", \"F1-Score\", \"ROC-AUC\", \"AUC-PR\"], baseline_models_overfitting)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fe872c0e-d238-4b4f-a946-2d12929e311a",
    "metadata": {},
    "source": [
