--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5633,6 +5633,110 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c04c4866-533b-4021-9bef-7d8f80d94fbc",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Feature Misclassification Analysis</h3>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Analyze relationships between the features and misclassifications on the validation data through correlations and box plots.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f331115-6314-43d0-9750-0913f5844286",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to analyze feature correlations with misclassifications\n",
+    "def analyze_feature_misclassification(X, y, y_pred, numerical_features=None):  \n",
+    "    # Combine features with actual and predicted target values into a single DataFrame\n",
+    "    df = X.copy()  \n",
+    "    df[\"Actual\"] = y\n",
+    "    df[\"Predicted\"] = y_pred\n",
+    "\n",
+    "    # Create misclassification column\n",
+    "    df[\"Misclassification\"] = (df[\"Predicted\"] != df[\"Actual\"]).astype(int)\n",
+    "    \n",
+    "    # Create correlations between features and misclassifications\n",
+    "    correlations = df.drop(columns=[\"Actual\", \"Predicted\"]).corr()[\"Misclassification\"]\n",
+    "    \n",
+    "    # --- Create box plot matrix ---\n",
+    "    # Ensure only numerical features\n",
+    "    if numerical_features is None:\n",
+    "        numerical_features = X.select_dtypes(include=[\"number\"]).columns  \n",
+    "        # Include continuous numerical features, exclude binary and ordinal features with less than 5 categories\n",
+    "        numerical_features = [column for column in numerical_features if X[column].nunique() > 4]\n",
+    "        \n",
+    "    # Number of columns and rows for matrix grid\n",
+    "    n_cols = 3  \n",
+    "    n_rows = math.ceil(len(numerical_features) / n_cols)\n",
+    "    \n",
+    "    # Create subplot grid with figure size based on 4x4 inches per subplot\n",
+    "    fig, axes = plt.subplots(n_rows, n_cols, figsize=(n_cols * 4, n_rows * 4))\n",
+    "    \n",
+    "    # Flatten axes for easier iteration\n",
+    "    axes = axes.flat\n",
+    "    \n",
+    "    # Iterate over the numerical features \n",
+    "    for i, feature in enumerate(numerical_features):\n",
+    "        # Get the current axes object\n",
+    "        ax = axes[i]\n",
+    "        \n",
+    "        # Create a box plot of the current feature grouped by misclassification\n",
+    "        sns.boxplot(data=df, x=\"Misclassification\", y=feature, ax=ax)\n",
+    "        \n",
+    "        # Customize plot\n",
+    "        ax.set_title(f\"{feature.title().replace('_', ' ')} by Misclassification\")\n",
+    "        ax.set_xlabel(\"Misclassification\")\n",
+    "        ax.set_ylabel(f\"{feature.title().replace('_', ' ')}\")\n",
+    "        ax.set_xticks(ticks=[0, 1], labels=[\"Correct\", \"Misclassified\"])\n",
+    "    \n",
+    "    # Adjust layout to prevent overlap\n",
+    "    fig.tight_layout()\n",
+    "    \n",
+    "    # Show the plot\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Return the misclassification correlations\n",
+    "    return correlations\n",
+    "\n",
+    "\n",
+    "# Example usage for a single model  \n",
+    "# rf_misclassification_correlations = analyze_feature_misclassification(X_val_transformed, y_val, baseline_model_results[\"Random Forest\"][\"y_val_pred\"])\n",
+    "\n",
+    "# --- Use function to analyze feature misclassification relationships of all baseline models (no outlier handling) ---\n",
+    "# Initialize results dictionary\n",
+    "baseline_misclassification_correlations = {}\n",
+    "# Iterate over each model\n",
+    "for model_name, model_result in baseline_model_results.items():\n",
+    "    print(f\"{model_name}: Feature Misclassification Analysis\")\n",
+    "    # Analyze feature misclassification relationships for current model\n",
+    "    misclassification_correlations = analyze_feature_misclassification(X_val_transformed, y_val, model_result[\"y_val_pred\"])\n",
+    "    # Add current model results to dictionary\n",
+    "    baseline_misclassification_correlations[model_name] = misclassification_correlations\n",
+    "    print(\"=\" * 145)\n",
+    "# Convert results dictionary into a DataFrame    \n",
+    "baseline_misclassification_correlations = pd.DataFrame(baseline_misclassification_correlations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a90368c-8b9b-4b7a-bcfa-a8b9608f3636",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display feature misclassification correlations of all baseline models (with 2 decimals)\n",
+    "round(baseline_misclassification_correlations, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fe872c0e-d238-4b4f-a946-2d12929e311a",
    "metadata": {},
    "source": [
