In machine_learning_template.ipynb > Modeling (Classification) > Hyperparameter Tuning section: Update markdown cell with model selection examples

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -9,7 +9,7 @@
     "    Machine Learning Template\n",
     "    <p style=\"text-align:center; font-size:14px; font-weight:normal; color:#4A4A4A; margin-top:12px;\">\n",
     "        Author: Jens Bender <br> \n",
-    "        February 2025\n",
+    "        May 2025\n",
     "    </p>\n",
     "</div>"
    ]
@@ -5744,16 +5744,15 @@
     "    <h2 style=\"margin:0px\">Hyperparameter Tuning</h2>\n",
     "</div>\n",
     "\n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Based on baseline model training, select the best performing models for hyperparameter tuning. <br><br> \n",
-    "    💡 Example: The following models outperformed the other candidates on evaluation metrics such as accuracy, recall, precision, and F1-score on the validation data and were selected for hyperparameter tuning:  \n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    💡  Select the best performing baseline models for hyperparameter tuning. <br><br>\n",
+    "    Example: The following models outperformed the other candidates on the evaluation metrics (accuracy, recall, precision, F1-score, ROC-AUC, AUC-PR) and additional diagnostics (precision-recall curves, classification report, confusion matrix, overfitting, feature misclassification analysis) and were selected for hyperparameter tuning:  \n",
     "    <ul>\n",
-    "        <li><b>Random Forest Classifier</b>  \n",
-    "            <br><i>Justification:</i> Demonstrated high recall and F1-score, indicating robust performance across multiple classes and strong handling of imbalanced datasets.</li>\n",
-    "        <li><b>XGBoost Classifier</b>  \n",
-    "            <br><i>Justification:</i> Consistently high accuracy across classes and strong overall evaluation metric scores, making it a competitive option for fine-tuning.</li>\n",
+    "        <li><b>Random Forest</b>: Showed balanced, high performance across key metrics (notably F1-score and AUC-PR) and minimal overfitting.</li>\n",
+    "        <li><b>XGBoost</b>: Achieved leading performance on key metrics, especially ROC-AUC and F1-score.</li>\n",
     "    </ul>\n",
-    "</div>\n"
+    "    Next steps: Tune the hyperparameters of each model using grid search or randomized search and optimize decision thresholds. Evaluate the best hyperparameter-tuned models with both default and optimized thresholds on the validation data using evaluation metrics and additional diagnostics. \n",
+    "</div>"
    ]
   },
   {
