In machine_learning_template.ipynb > Modeling (Classification) > Hyperparameter Tuning > Grid Search > Model 1 section: Update markdown documentation of Random Forest Classifier example

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5745,8 +5745,8 @@
     "</div>\n",
     "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
-    "    💡  Select the best performing baseline models for hyperparameter tuning. <br><br>\n",
-    "    Example: The following models outperformed the other candidates on the evaluation metrics (accuracy, recall, precision, F1-score, ROC-AUC, AUC-PR) and additional diagnostics (precision-recall curves, classification report, confusion matrix, overfitting, feature misclassification analysis) and were selected for hyperparameter tuning:  \n",
+    "    Select the best performing baseline models for hyperparameter tuning. <br><br>\n",
+    "    💡  Example: The following models outperformed the other candidates on the evaluation metrics (accuracy, recall, precision, F1-score, ROC-AUC, AUC-PR) and additional diagnostics (precision-recall curves, classification report, confusion matrix, overfitting, feature misclassification analysis) and were selected for hyperparameter tuning:  \n",
     "    <ul>\n",
     "        <li><b>Random Forest</b>: Showed balanced, high performance across key metrics (notably F1-score and AUC-PR) and minimal overfitting.</li>\n",
     "        <li><b>XGBoost</b>: Achieved leading performance on key metrics, especially ROC-AUC and F1-score.</li>\n",
@@ -5799,17 +5799,18 @@
     "    <h4 style=\"margin:0px\">Model 1</h4>\n",
     "</div>\n",
     "\n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    <p>💡 Example: Random Forest Classifier</p>\n",
-    "    <p>The following hyperparameters are typically the most impactful:</p>\n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    💡 Example: Random Forest Classifier <br><br>\n",
+    "    ℹ️ The following hyperparameters are typically the most impactful:\n",
     "    <ul>\n",
-    "        <li><code>n_estimators</code></li>\n",
-    "        <li><code>max_depth</code></li>\n",
-    "        <li><code>min_samples_split</code></li>\n",
-    "        <li><code>min_samples_leaf</code></li>\n",
-    "        <li><code>max_features</code></li>\n",
+    "        <li><code>n_estimators</code>: Number of trees in the forest.</li>\n",
+    "        <li><code>max_depth</code>: Maximum depth of each tree; <code>None</code> allows trees to grow until all leaves are pure or minimum samples are reached.</li>\n",
+    "        <li><code>min_samples_split</code>: Minimum number of samples required to split a node.</li>\n",
+    "        <li><code>min_samples_leaf</code>: Minimum number of samples required at a leaf node.</li>\n",
+    "        <li><code>max_features</code>: Number of features considered for the best split; default <code>\"auto\"</code> uses the square root of all features.</li>\n",
+    "        <li><code>class_weight</code>: Weights associated with classes. If <code>None</code>, all classes are supposed to have weight one. Use <code>\"balanced\"</code> to automatically adjust weights inversely proportional to class frequencies in the input data.</li>\n",
     "    </ul>\n",
-    "    <p>For more details, refer to the official <a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html#sklearn.ensemble.RandomForestClassifier\" target=\"_blank\">scikit-learn RandomForestClassifier documentation</a>.</p>\n",
+    "    <p>For more details, refer to the official <a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\" target=\"_blank\">scikit-learn RandomForestClassifier documentation</a>.</p>\n",
     "</div>"
    ]
   },
