In machine_learning_template.ipynb > Modeling (Classification) > Hyperparameter Tuning > Grid Search > Model 1 section: Save grid search as .pkl and update documentation comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5815,6 +5815,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42f1feb0-3ff7-40c7-a766-c491b0321ac4",
+   "metadata": {},
+   "source": [
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    📌 Fit grid search and save as <code>.pkl</code> file.\n",
+    "</p> "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cae75e06-4ef6-469b-856e-e8f219f6b148",
@@ -5838,11 +5848,14 @@
     "    estimator=rf, \n",
     "    param_grid=rf_param_grid, \n",
     "    cv=5, \n",
-    "    scoring=\"accuracy\"  # use \"f1\", \"precision\", \"recall\" or \"roc_auc\" optionally\n",
+    "    scoring=\"accuracy\"  # use \"f1\", \"precision\", \"recall\" or \"average_precision\" optionally\n",
     ")\n",
     "\n",
     "# Fit the grid search to the training data\n",
-    "rf_grid_search.fit(X_train_transformed, y_train)"
+    "rf_grid_search.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Save fitted grid search as .pkl file (using helper function)  \n",
+    "save_model(rf_grid_search, \"rf_grid_search.pkl\")"
    ]
   },
   {
