In machine_learning_template.ipynb > Modeling (Classification) > Hyperparameter Tuning > Grid Search > Model 1 section: Load grid search from .pkl and show top 10 models

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5859,12 +5859,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ffad87cd-51d1-4830-8c53-412eebedfacb",
+   "metadata": {},
+   "source": [
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    📌 Load grid search from <code>.pkl</code> file and show Top 10 models.\n",
+    "</p> "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0d2528d8-f322-454c-b7dd-d100bfea0d7c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load random search (using helper function) \n",
+    "rf_grid_search = load_model(\"rf_grid_search.pkl\")\n",
+    "\n",
     "# DataFrame of grid search results \n",
     "rf_grid_search_results = pd.DataFrame({\n",
     "    \"validation_accuracy\": rf_grid_search.cv_results_[\"mean_test_score\"],  # accuracy on validation data\n",
