--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5875,26 +5875,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load random search (using helper function) \n",
+    "# Load grid search (using helper function) \n",
     "rf_grid_search = load_model(\"rf_grid_search.pkl\")\n",
     "\n",
-    "# DataFrame of grid search results \n",
+    "# Create DataFrame of grid search results \n",
     "rf_grid_search_results = pd.DataFrame({\n",
     "    \"validation_accuracy\": rf_grid_search.cv_results_[\"mean_test_score\"],  # accuracy on validation data\n",
     "    \"parameters\": rf_grid_search.cv_results_[\"params\"]  # parameter values\n",
     "}) \n",
     "\n",
     "# Extract each hyperparameter as a separate column\n",
-    "rf_grid_search_results[\"n_estimators\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"n_estimators\"])\n",
-    "rf_grid_search_results[\"max_depth\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"max_depth\"])\n",
-    "rf_grid_search_results[\"min_samples_split\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"min_samples_split\"])\n",
-    "rf_grid_search_results[\"min_samples_leaf\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"min_samples_leaf\"])\n",
-    "rf_grid_search_results[\"max_features\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"max_features\"])\n",
+    "for parameter in rf_param_distributions:\n",
+    "    rf_grid_search_results[parameter] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[parameter])\n",
     "\n",
     "# Delete the parameters column\n",
     "rf_grid_search_results = rf_grid_search_results.drop(\"parameters\", axis=1)\n",
     "\n",
-    "# Show the top 10 best performing models\n",
+    "# Show top 10 best performing models\n",
     "print(rf_grid_search_results.sort_values(\"validation_accuracy\", ascending=False).head(10))"
    ]
   },
