--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5904,20 +5904,31 @@
     "    <h4 style=\"margin:0px\">Model 2</h4>\n",
     "</div>\n",
     "\n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    <p>💡 Example: XGBoost Classifier</p>\n",
-    "    <p>The following hyperparameters are typically the most impactful:</p>\n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    💡 Example: XGBoost Classifier <br><br>\n",
+    "    ℹ️ The following hyperparameters are typically the most impactful:\n",
     "    <ul>\n",
-    "        <li><code>n_estimators</code></li>\n",
-    "        <li><code>max_depth</code></li>\n",
-    "        <li><code>learning_rate</code></li>\n",
-    "        <li><code>subsample</code></li>\n",
-    "        <li><code>colsample_bytree</code></li>\n",
-    "        <li><code>gamma</code></li>\n",
-    "        <li><code>min_child_weight</code></li>\n",
+    "        <li><code>n_estimators</code>: Number of trees (boosting rounds).</li>\n",
+    "        <li><code>max_depth</code>: Maximum depth of each tree.</li>\n",
+    "        <li><code>learning_rate</code>: Step size shrinkage to prevent overfitting.</li>\n",
+    "        <li><code>subsample</code>: Fraction of training samples used per tree.</li>\n",
+    "        <li><code>colsample_bytree</code>: Fraction of features used per tree.</li>\n",
+    "        <li><code>gamma</code>: Minimum loss reduction required to split a leaf node.</li>\n",
+    "        <li><code>min_child_weight</code>: Minimum sum of instance weights (hessian) in a child.</li>\n",
+    "        <li><code>scale_pos_weight</code>: Balances positive and negative class weights for imbalanced datasets.</li>\n",
     "    </ul>\n",
     "    <p>For more details, refer to the official <a href=\"https://xgboost.readthedocs.io/en/latest/parameter.html\" target=\"_blank\">XGBoost documentation</a>.</p>\n",
-    "</div>\n"
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccf82a48-f290-4ce6-9e50-82eb5d19d790",
+   "metadata": {},
+   "source": [
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    📌 Fit grid search and save as <code>.pkl</code> file.\n",
+    "</p> "
    ]
   },
   {
@@ -5938,7 +5949,8 @@
     "    \"subsample\": [0.6, 0.8, 1.0],\n",
     "    \"colsample_bytree\": [0.6, 0.8, 1.0],  \n",
     "    \"gamma\": [0, 0.1, 0.2],           \n",
-    "    \"min_child_weight\": [1, 3, 5]\n",
+    "    \"min_child_weight\": [1, 3, 5],\n",
+    "    \"scale_pos_weight\": [1, 5, 10]\n",
     "}\n",
     "\n",
     "# Initialize grid search object\n",
@@ -5946,11 +5958,14 @@
     "    estimator=xgb,\n",
     "    param_grid=xgb_param_grid, \n",
     "    cv=5, \n",
-    "    scoring=\"accuracy\"  # use \"f1\", \"precision\", \"recall\" or \"roc_auc\" optionally\n",
+    "    scoring=\"accuracy\"  # use \"f1\", \"precision\", \"recall\" or \"average_precision\" optionally\n",
     ")\n",
     "\n",
     "# Fit the grid search to the training data\n",
-    "xgb_grid_search.fit(X_train_transformed, y_train)"
+    "xgb_grid_search.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Save fitted grid search as .pkl file (using helper function)  \n",
+    "save_model(xgb_grid_search, \"xgb_grid_search.pkl\")"
    ]
   },
   {
