In machine_learning_template.ipynb > Modeling (Classification) > Hyperparameter Tuning > Grid Search > Model 2 section: Load grid search results, extract hyperparameters in for-loop and show top 10 models

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5892,7 +5892,7 @@
     "rf_grid_search_results = rf_grid_search_results.drop(\"parameters\", axis=1)\n",
     "\n",
     "# Show top 10 best performing models\n",
-    "print(rf_grid_search_results.sort_values(\"validation_accuracy\", ascending=False).head(10))"
+    "rf_grid_search_results.sort_values(\"validation_accuracy\", ascending=False).head(10)"
    ]
   },
   {
@@ -5969,32 +5969,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a045823d-6fc9-4926-9957-92fc54e705c6",
+   "metadata": {},
+   "source": [
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    📌 Load grid search from <code>.pkl</code> file and show Top 10 models.\n",
+    "</p> "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "82f7e442-ad81-4970-8400-203268267790",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DataFrame of grid search results \n",
+    "# Load grid search (using helper function) \n",
+    "xgb_grid_search = load_model(\"xgb_grid_search.pkl\")\n",
+    "\n",
+    "# Create DataFrame of grid search results \n",
     "xgb_grid_search_results = pd.DataFrame({\n",
     "    \"validation_accuracy\": xgb_grid_search.cv_results_[\"mean_test_score\"],  # accuracy on validation data\n",
     "    \"parameters\": xgb_grid_search.cv_results_[\"params\"]  # parameter values\n",
     "}) \n",
     "\n",
     "# Extract each hyperparameter as a separate column\n",
-    "xgb_grid_search_results[\"n_estimators\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"n_estimators\"])\n",
-    "xgb_grid_search_results[\"max_depth\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"max_depth\"])\n",
-    "xgb_grid_search_results[\"learning_rate\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"learning_rate\"])\n",
-    "xgb_grid_search_results[\"subsample\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"subsample\"])\n",
-    "xgb_grid_search_results[\"colsample_bytree\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"colsample_bytree\"])\n",
-    "xgb_grid_search_results[\"gamma\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"gamma\"])\n",
-    "xgb_grid_search_results[\"min_child_weight\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"min_child_weight\"])\n",
+    "for parameter in xgb_param_grid:\n",
+    "    xgb_grid_search_results[parameter] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[parameter])\n",
     "\n",
     "# Delete the parameters column\n",
     "xgb_grid_search_results = xgb_grid_search_results.drop(\"parameters\", axis=1)\n",
     "\n",
-    "# Show the top 10 best performing models\n",
-    "print(xgb_grid_search_results.sort_values(\"validation_accuracy\", ascending=False).head(10))"
+    "# Show top 10 best performing models\n",
+    "xgb_grid_search_results.sort_values(\"validation_accuracy\", ascending=False).head(10)"
    ]
   },
   {
