--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -6061,18 +6061,29 @@
     "    <h4 style=\"margin:0px\">Model 1</h4>\n",
     "</div> \n",
     "\n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    <p>💡 Example: Random Forest Classifier</p>\n",
-    "    <p>The following hyperparameters are typically the most impactful:</p>\n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    💡 Example: Random Forest Classifier <br><br>\n",
+    "    ℹ️ The following hyperparameters are typically the most impactful:\n",
     "    <ul>\n",
-    "        <li><code>n_estimators</code></li>\n",
-    "        <li><code>max_depth</code></li>\n",
-    "        <li><code>min_samples_split</code></li>\n",
-    "        <li><code>min_samples_leaf</code></li>\n",
-    "        <li><code>max_features</code></li>\n",
+    "        <li><code>n_estimators</code>: Number of trees in the forest.</li>\n",
+    "        <li><code>max_depth</code>: Maximum depth of each tree; <code>None</code> allows trees to grow until all leaves are pure or minimum samples are reached.</li>\n",
+    "        <li><code>min_samples_split</code>: Minimum number of samples required to split a node.</li>\n",
+    "        <li><code>min_samples_leaf</code>: Minimum number of samples required at a leaf node.</li>\n",
+    "        <li><code>max_features</code>: Number of features considered for the best split; default <code>\"auto\"</code> uses the square root of all features.</li>\n",
+    "        <li><code>class_weight</code>: Weights associated with classes. If <code>None</code>, all classes are supposed to have weight one. Use <code>\"balanced\"</code> to automatically adjust weights inversely proportional to class frequencies in the input data.</li>\n",
     "    </ul>\n",
-    "    <p>For more details, refer to the official <a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html#sklearn.ensemble.RandomForestClassifier\" target=\"_blank\">scikit-learn RandomForestClassifier documentation</a>.</p>\n",
-    "</div>\n"
+    "    <p>For more details, refer to the official <a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\" target=\"_blank\">scikit-learn RandomForestClassifier documentation</a>.</p>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "558fb1d8-e50a-4732-a4d7-35965e159681",
+   "metadata": {},
+   "source": [
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    📌 Fit random search and save as <code>.pkl</code> file.\n",
+    "</p> "
    ]
   },
   {
@@ -6087,11 +6098,12 @@
     "\n",
     "# Define hyperparameter distributions \n",
     "rf_param_distributions = {\n",
-    "    \"n_estimators\": randint(50, 1000),               \n",
-    "    \"max_depth\": randint(5, 50),              \n",
-    "    \"min_samples_split\": randint(2, 20),\n",
-    "    \"min_samples_leaf\": randint(1, 10),\n",
-    "    \"max_features\": uniform(0.1, 0.9)                \n",
+    "    \"n_estimators\": randint(100, 501),  # Random integers between 100 and 500             \n",
+    "    \"max_depth\": randint(5, 31),  # Random integers between 5 and 30            \n",
+    "    \"min_samples_split\": randint(2, 21),  # Random integers between 2 and 20\n",
+    "    \"min_samples_leaf\": randint(1, 11),  # Random integers between 1 and 10\n",
+    "    \"max_features\": uniform(0.1, 0.9),  # Random floats between 0.1 and 1.0  \n",
+    "    \"class_weight\": [None, \"balanced\", \"balanced_subsample\"]\n",
     "}\n",
     "\n",
     "# Initialize randomized search object\n",
@@ -6100,12 +6112,18 @@
     "    param_distributions=rf_param_distributions, \n",
     "    n_iter=50,\n",
     "    cv=5, \n",
-    "    scoring=\"accuracy\",  # use \"f1\", \"precision\", \"recall\" or \"roc_auc\" optionally\n",
-    "    random_state=42\n",
+    "    scoring=\"accuracy\",  # use \"f1\", \"precision\", \"recall\" or \"average_precision\" optionally\n",
+    "    random_state=42,\n",
+    "    n_jobs=-1,  # utilize all available CPU cores for parallel processing\n",
+    "    verbose=2,\n",
+    "    refit=False  # Prevent storing \"best_estimator_\" to save storage\n",
     ")\n",
     "\n",
     "# Fit the random search to the training data\n",
-    "rf_random_search.fit(X_train_transformed, y_train)"
+    "rf_random_search.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Save fitted random search as .pkl file (using helper function)  \n",
+    "save_model(rf_random_search, \"rf_random_search.pkl\")"
    ]
   },
   {
