In machine_learning_template.ipynb > Modeling (Classification) > Hyperparameter Tuning > Randomized Search > Model 1 section: Load random search from .pkl and use for-loop to extract parameters

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -6127,12 +6127,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e16c2ae-96f3-48d0-90d3-91d124d0f568",
+   "metadata": {},
+   "source": [
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    📌 Load random search from <code>.pkl</code> file and show Top 10 models.\n",
+    "</p> "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b4f52f2a-3390-4b2f-a0d2-8483a069b80e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load random search (using helper function) \n",
+    "rf_random_search = load_model(\"rf_random_search.pkl\")\n",
+    "\n",
     "# DataFrame of randomized search results\n",
     "rf_random_search_results = pd.DataFrame({\n",
     "    \"validation_accuracy\": rf_random_search.cv_results_[\"mean_test_score\"],  # accuracy on validation data\n",
@@ -6140,17 +6153,14 @@
     "})\n",
     "\n",
     "# Extract each hyperparameter as a separate column\n",
-    "rf_random_search_results[\"n_estimators\"] = rf_random_search_results[\"parameters\"].apply(lambda x: x[\"n_estimators\"])\n",
-    "rf_random_search_results[\"max_depth\"] = rf_random_search_results[\"parameters\"].apply(lambda x: x[\"max_depth\"])\n",
-    "rf_random_search_results[\"min_samples_split\"] = rf_random_search_results[\"parameters\"].apply(lambda x: x[\"min_samples_split\"])\n",
-    "rf_random_search_results[\"min_samples_leaf\"] = rf_random_search_results[\"parameters\"].apply(lambda x: x[\"min_samples_leaf\"])\n",
-    "rf_random_search_results[\"max_features\"] = rf_random_search_results[\"parameters\"].apply(lambda x: x[\"max_features\"])\n",
+    "for parameter in rf_param_distributions:\n",
+    "    rf_random_search_results[parameter] = rf_random_search_results[\"parameters\"].apply(lambda x: x[parameter])\n",
     "\n",
     "# Delete the parameters column\n",
     "rf_random_search_results = rf_random_search_results.drop(\"parameters\", axis=1)\n",
     "\n",
-    "# Show the top 10 best performing models \n",
-    "print(rf_random_search_results.sort_values(\"validation_accuracy\", ascending=False).head(10))"
+    "# Show top 10 best performing models \n",
+    "rf_random_search_results.sort_values(\"validation_accuracy\", ascending=False).head(10)"
    ]
   },
   {
