--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5787,7 +5787,7 @@
     "            </ul>  \n",
     "        </li>  \n",
     "    </ul>  \n",
-    "</div>  \n"
+    "</div>  "
    ]
   },
   {
@@ -5810,7 +5810,7 @@
     "        <li><code>max_features</code>: Number of features considered for the best split; default <code>\"auto\"</code> uses the square root of all features.</li>\n",
     "        <li><code>class_weight</code>: Weights associated with classes. If <code>None</code>, all classes are supposed to have weight one. Use <code>\"balanced\"</code> to automatically adjust weights inversely proportional to class frequencies in the input data.</li>\n",
     "    </ul>\n",
-    "    <p>For more details, refer to the official <a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\" target=\"_blank\">scikit-learn RandomForestClassifier documentation</a>.</p>\n",
+    "    For more details, refer to the official <a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\" target=\"_blank\">scikit-learn RandomForestClassifier documentation</a>.\n",
     "</div>"
    ]
   },
@@ -5917,7 +5917,7 @@
     "        <li><code>min_child_weight</code>: Minimum sum of instance weights (hessian) in a child.</li>\n",
     "        <li><code>scale_pos_weight</code>: Balances positive and negative class weights for imbalanced datasets.</li>\n",
     "    </ul>\n",
-    "    <p>For more details, refer to the official <a href=\"https://xgboost.readthedocs.io/en/latest/parameter.html\" target=\"_blank\">XGBoost documentation</a>.</p>\n",
+    "    For more details, refer to the official <a href=\"https://xgboost.readthedocs.io/en/latest/parameter.html\" target=\"_blank\">XGBoost documentation</a>.\n",
     "</div>"
    ]
   },
@@ -6038,7 +6038,7 @@
     "            </ul>  \n",
     "        </li>  \n",
     "    </ul>  \n",
-    "</div>  \n"
+    "</div>  "
    ]
   },
   {
@@ -6072,7 +6072,7 @@
     "        <li><code>max_features</code>: Number of features considered for the best split; default <code>\"auto\"</code> uses the square root of all features.</li>\n",
     "        <li><code>class_weight</code>: Weights associated with classes. If <code>None</code>, all classes are supposed to have weight one. Use <code>\"balanced\"</code> to automatically adjust weights inversely proportional to class frequencies in the input data.</li>\n",
     "    </ul>\n",
-    "    <p>For more details, refer to the official <a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\" target=\"_blank\">scikit-learn RandomForestClassifier documentation</a>.</p>\n",
+    "    For more details, refer to the official <a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\" target=\"_blank\">scikit-learn RandomForestClassifier documentation</a>.\n",
     "</div>"
    ]
   },
@@ -6172,20 +6172,31 @@
     "    <h4 style=\"margin:0px\">Model 2</h4>\n",
     "</div>\n",
     "\n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    <p>💡 Example: XGBoost Classifier</p>\n",
-    "    <p>The following hyperparameters are typically the most impactful:</p>\n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    💡 Example: XGBoost Classifier <br><br>\n",
+    "    ℹ️ The following hyperparameters are typically the most impactful:\n",
     "    <ul>\n",
-    "        <li><code>n_estimators</code></li>\n",
-    "        <li><code>max_depth</code></li>\n",
-    "        <li><code>learning_rate</code></li>\n",
-    "        <li><code>subsample</code></li>\n",
-    "        <li><code>colsample_bytree</code></li>\n",
-    "        <li><code>gamma</code></li>\n",
-    "        <li><code>min_child_weight</code></li>\n",
+    "        <li><code>n_estimators</code>: Number of trees (boosting rounds).</li>\n",
+    "        <li><code>max_depth</code>: Maximum depth of each tree.</li>\n",
+    "        <li><code>learning_rate</code>: Step size shrinkage to prevent overfitting.</li>\n",
+    "        <li><code>subsample</code>: Fraction of training samples used per tree.</li>\n",
+    "        <li><code>colsample_bytree</code>: Fraction of features used per tree.</li>\n",
+    "        <li><code>gamma</code>: Minimum loss reduction required to split a leaf node.</li>\n",
+    "        <li><code>min_child_weight</code>: Minimum sum of instance weights (hessian) in a child.</li>\n",
+    "        <li><code>scale_pos_weight</code>: Balances positive and negative class weights for imbalanced datasets.</li>\n",
     "    </ul>\n",
-    "    <p>For more details, refer to the official <a href=\"https://xgboost.readthedocs.io/en/latest/parameter.html\" target=\"_blank\">XGBoost documentation</a>.</p>\n",
-    "</div>\n"
+    "    For more details, refer to the official <a href=\"https://xgboost.readthedocs.io/en/latest/parameter.html\" target=\"_blank\">XGBoost documentation</a>.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6e55af7-650b-4502-9b8e-9c214e4880ca",
+   "metadata": {},
+   "source": [
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    📌 Fit random search and save as <code>.pkl</code> file.\n",
+    "</p> "
    ]
   },
   {
@@ -6200,13 +6211,14 @@
     "\n",
     "# Define hyperparameter distributions \n",
     "xgb_param_distributions = {\n",
-    "    'n_estimators': [100, 200, 300, 400, 500, 600, 700],  \n",
-    "    'max_depth': randint(3, 11),                \n",
-    "    'learning_rate': uniform(0.01, 0.4),       \n",
-    "    'subsample': uniform(0.5, 0.5),             \n",
-    "    'colsample_bytree': uniform(0.5, 0.5),      \n",
-    "    'gamma': uniform(0, 0.5),                     \n",
-    "    'min_child_weight': [1, 3, 5, 7],           \n",
+    "    \"n_estimators\": randint(100, 501),  # Random integers between 100 and 500             \n",
+    "    \"max_depth\": randint(3, 11),  # Random integers between 3 and 10            \n",
+    "    \"learning_rate\": uniform(0.01, 0.29),  # Random floats between 0.01 and 0.30\n",
+    "    \"subsample\": uniform(0.5, 0.5),  # Random floats between 0.5 and 1.0\n",
+    "    \"colsample_bytree\": uniform(0.5, 0.5),  # Random floats between 0.5 and 1.0\n",
+    "    \"gamma\": uniform(0, 0.5),  # Random floats between 0.0 and 0.5  \n",
+    "    \"min_child_weight\": randint(1, 10),  # Random integers between 1 and 9\n",
+    "    \"scale_pos_weight\": randint(1, 16)  # Random integers between 1 and 15\n",
     "}\n",
     "\n",
     "# Initialize randomized search object\n",
@@ -6215,12 +6227,17 @@
     "    param_distributions=xgb_param_distributions, \n",
     "    n_iter=50,\n",
     "    cv=5, \n",
-    "    scoring=\"accuracy\",  # use \"f1\", \"precision\", \"recall\" or \"roc_auc\" optionally\n",
-    "    random_state=42\n",
+    "    scoring=\"accuracy\",  # use \"f1\", \"precision\", \"recall\" or \"average_precision\" optionally\n",
+    "    random_state=42,\n",
+    "    n_jobs=-1,  # utilize all available CPU cores for parallel processing\n",
+    "    verbose=2\n",
     ")\n",
     "\n",
     "# Fit the random search to the training data\n",
-    "xgb_random_search.fit(X_train_transformed, y_train)"
+    "xgb_random_search.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Save fitted random search as .pkl file (using helper function)  \n",
+    "save_model(xgb_random_search, \"xgb_random_search.pkl\")"
    ]
   },
   {
